# ClaudeGauge

./: .gitignore  README.md  index.html  package-lock.json  package.json  start-app.cmd  vite.config.ts
.claude/: settings.local.json
dist-electron/: main.js  preload.js
dist-electron/services/: claude.js  codex.js  config.js  hook-writer.js  statusline-tee.js
docs/superpowers/plans/: 2026-05-20-claudegauge.md
docs/superpowers/specs/: 2026-05-20-claudegauge-design.md
electron/: main.ts  preload.ts  tsconfig.json  types.ts
electron/services/: claude.ts  codex.ts  config.ts  hook-writer.js  statusline-tee.js
src/: App.tsx  bridge.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  ipc.rs  lib.rs  main.rs  models.rs
src-tauri/src/claude/: hook_writer.rs  live.rs  mod.rs  transcript.rs
src-tauri/src/codex/: live.rs  session.rs
src/components/: ClaudeSection.tsx  CodexSection.tsx  FloatingWidget.tsx  ModelDistribution.tsx  ServiceSection.css  ServiceSection.tsx  UsageBar.css  UsageBar.tsx
src/hooks/: useHistoricalData.ts  useLiveData.ts
