[package]
name = "claudegauge"
version = "0.1.0"
description = "Claude Code and Codex usage dashboard for Windows"
authors = ["ClaudeGauge"]
edition = "2021"

[lib]
name = "claudegauge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
globwalk = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
